--- a/Episode 03/config.json
+++ b/Episode 03/config.json
@@ -1,5 +1,6 @@
   
 {
-    "token": "Your-Token",
-    "prefix": "+"
+    "token": "ODc5NDg5OTY0ODYwMTMzNTA2.YSQe2w.3Df2q7byrvoKGZCxcpORpdK8soc",
+    "prefix": "L!!"
 }
+
